--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-7127143-50"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-7127143-50', { 'anonymize_ip': true });
+    </script>
+
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Stadt, Land, Krank</title>
@@ -110,6 +120,10 @@
         margin: 0 auto;
         left: 0;
         right: 0;
+    }
+
+    #scatter {
+        width: 75%;
     }
 
     #vis svg {
@@ -378,6 +392,7 @@
             }, 200);
         });
         window.addEventListener('resize', function() {
+            console.log('resize');
             setTimeout(function() {
                 d3.select('#scatter > svg').remove();
                 d3.select('#filter > select').remove();
