--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <meta name="twitter:creator" content="@dahilzen">
     <meta name="twitter:title" content="Stadt, Land, Krank">
     <meta name="twitter:description" content="So ist es um die medizinische Versorgung in der Region Heilbronn bestellt.">
-    <meta name="twitter:image" content="img/screen.png">
+    <meta name="twitter:image" content="./img/screen.png">
 
     <meta property="og:url" content="https://dahilzen.github.io/stadt_land_krank/"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Stadt, Land, Krank"/>
     <meta property="og:description" content="So ist es um die medizinische Versorgung in der Region Heilbronn bestellt."/>
-    <meta property="og:image" content="img/screen.png"/>
+    <meta property="og:image" content="./img/screen.png"/>
 
 
     <title>Stadt, Land, Krank</title>
