--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         <p>Natürlich ist es wenig überraschend, dass sich dort, wo mehr Menschen leben &ndash; also in größeren Städten und Ballungsgebieten &ndash; auch mehr Ärzte niederlassen.</p>
         <p>Ein Blick auf den Anteil der Ärzte pro 1.000 Einwohner in den Gemeinden der Region ergibt allerdings ein ziemlich schiefes Bild: Vor allem Fachärzte arbeiten bevorzugt in größeren Gemeinden. In einigen kleineren Kommunen der Region gibt es noch nicht einmal mehr einen Hausarzt oder einen Zahnarzt.
         </p>
-        <p>Die folgende Grafik zeigt den Anteil der Ärzte pro 1.000 Einwohner für alle 63 Gemeinden der Landkreise Heilbronn und Hohenlohe sowie dem Stadtkreis Heilbronn. Suchen Sie sich Ihre Gemeinde und vergleichen Sie.</p>
+        <p>Die folgende Grafik zeigt den Anteil der Ärzte pro 1.000 Einwohner für Baden-Württemberg insgesamt und für alle 63 Gemeinden der Landkreise Heilbronn und Hohenlohe sowie dem Stadtkreis Heilbronn. Suchen Sie sich Ihre Gemeinde und vergleichen Sie.</p>
     </section>
     <section id="vis">
         <center>
