--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="twitter:description" content="So ist es um die medizinische Versorgung in der Region Heilbronn bestellt.">
     <meta name="twitter:image" content="./img/screen.png">
 
-    <meta property="og:url" content="https://dahilzen.github.io/stadt_land_krank/" />
+    <meta property="og:url" content="http://aerzte.stimme.de/" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Stadt, Land, Krank" />
     <meta property="og:description" content="So ist es um die medizinische Versorgung in der Region Heilbronn bestellt." />
@@ -276,11 +276,11 @@
             <img src='img/logo.png'></a>
     </div>
     <div class='social'>
-        <a href='https://twitter.com/intent/tweet?status=Stadt, Land, Krank - So ist es um die medizinische Versorgung in der Region Heilbronn bestellt+https://dahilzen.github.io/stadt_land_krank/' target='_blank'>
+        <a href='https://twitter.com/intent/tweet?status=Stadt, Land, Krank - So ist es um die medizinische Versorgung in der Region Heilbronn bestellt+http://aerzte.stimme.de/' target='_blank'>
             <img src='img/twitter.png'></a>
-        <a href='https://www.facebook.com/sharer/sharer.php?u=https://dahilzen.github.io/stadt_land_krank/&title=Stadt, Land, Krank - So ist es um die medizinische Versorgung in der Region Heilbronn bestellt' target='_blank'>
+        <a href='https://www.facebook.com/sharer/sharer.php?u=http://aerzte.stimme.de/&title=Stadt, Land, Krank - So ist es um die medizinische Versorgung in der Region Heilbronn bestellt' target='_blank'>
             <img src='img/facebook.png'></a>
-        <div class="whatsapp"><a href='whatsapp://send?text=Stadt, Land, Krank: So ist es um die medizinische Versorgung in der Region Heilbronn bestellt. https://dahilzen.github.io/stadt_land_krank/' target='_blank'>
+        <div class="whatsapp"><a href='whatsapp://send?text=Stadt, Land, Krank: So ist es um die medizinische Versorgung in der Region Heilbronn bestellt. http://aerzte.stimme.de/' target='_blank'>
             <img src='img/whatsapp.png'></a></div>
     </div>
     <section id='scroll'>
@@ -319,7 +319,7 @@
         <p>Natürlich ist es wenig überraschend, dass sich dort, wo mehr Menschen leben &ndash; also in größeren Städten und Ballungsgebieten &ndash; auch mehr Ärzte niederlassen.</p>
         <p>Ein Blick auf den Anteil der Ärzte pro 1.000 Einwohner in den Gemeinden der Region ergibt allerdings ein ziemlich schiefes Bild: Vor allem Fachärzte arbeiten bevorzugt in größeren Gemeinden. In einigen kleineren Kommunen der Region gibt es noch nicht einmal mehr einen Hausarzt oder einen Zahnarzt.
         </p>
-        <p>Die folgende Grafik zeigt den Anteil der Ärzte pro 1.000 Einwohner für Baden-Württemberg insgesamt und für alle 63 Gemeinden der Landkreise Heilbronn und Hohenlohe sowie dem Stadtkreis Heilbronn. Suchen Sie sich Ihre Gemeinde und vergleichen Sie.</p>
+        <p>Die folgende Grafik zeigt den Anteil der Ärzte pro 1.000 Einwohner für Baden-Württemberg insgesamt und für  alle 63 Gemeinden der Landkreise Heilbronn und Hohenlohe sowie dem Stadtkreis Heilbronn. Suchen Sie sich Ihre Gemeinde und vergleichen Sie.</p>
     </section>
     <section id="vis">
         <center>
