--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
         border-bottom: 1px solid #1a87c7 !important;
     }
 
-    #outro p, #impressum p {
+    #outro p,
+    #impressum p {
         font-size: 0.9rem !important;
     }
 
@@ -405,7 +406,7 @@
                     <p>Weil Hausärzte knapp werden, werden Gemeinden kreativ. Vom Finderlohn für einen Arzt bis zu Vermittlungsagenturen gibt es alles.</p>
                 </div>
             </a>
-                       <a href="http://www.stimme.de/3978941" target="_blank">
+            <a href="http://www.stimme.de/3978941" target="_blank">
                 <div class="link">
                     <img src="img/zweiflingen.jpg">
                     <h3>Wie Zweiflingen ohne einen Arzt klar kommt</h3>
