--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     }
 
     #impressum {
-        padding-top: 500px;
+        margin-top: 500px;
     }
     /* Small Multiples */
 
@@ -395,6 +395,10 @@
         <p>Dort ist prinizipiell auch die Anzahl der Ärzte pro Kommune auslesbar. Allerdings gibt es keine Garantie, dass Ärzte, die in bestimmten Kommunen gemeldet sind, auch dort arbeiten. Insbesondere Fachärzte betreiben gemeinsam mit Kollegen auf dem Papier oftmals mehrere Praxen, sind aber nur in einer davon tätig. Verlässlichere Zahlen bietet der <a href="https://www.kvbawue.de/presse/publikationen/versorgungsbericht/" target="_blank">Versorgungsbericht der Kassenärztlichen Vereinigung</a></p>
         <p>Die Bevölkerungsdaten, also die Einwohnerzahl sowie das Alter der Einwohner, stammen vom <a href="https://www.statistik-bw.de/" target="_blank">Statistischen Landesamt Baden-Württemberg</a>. Stand der Daten ist der 31.12.2015. Neuere Zahlen sind derzeit nicht öffentlich verfügbar.</p>
         <p>Der Quellcode und die Daten dieser Analyse sind <a href="https://github.com/dahilzen/stadt_land_krank" target="_blank">auf Github frei verfügbar.</a></p>
+
+        <p style="text-align: center;">
+            <a href="http://www.stimme.de/meta/ueberuns/impressum/Impressum;art5015,1284151" target="_blank">Impressum</a> |
+            <a href="http://www.stimme.de/meta/ueberuns/datenschutz/Datenschutzerklaerung;art77889,2188299" target="_blank">Datenschutz</a></p>
     </section>
     <section id="readon">
         <div class="readon">
@@ -421,12 +425,6 @@
                 </div>
             </a>
         </div>
-    </section>
-
-    <section id="impressum" class="text">
-        <p style="text-align: center;">
-            <a href="http://www.stimme.de/meta/ueberuns/impressum/Impressum;art5015,1284151" target="_blank">Impressum</a> |
-            <a href="http://www.stimme.de/meta/ueberuns/datenschutz/Datenschutzerklaerung;art77889,2188299" target="_blank">Datenschutz</a></p>
     </section>
 
     <script src='https://d3js.org/d3.v4.min.js'></script>
