--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 
         // setup resize event
         window.addEventListener('resize', handleResize);
-        window.addEventListener('resize', getMobile)
+        /*window.addEventListener('resize', getMobile)
         window.addEventListener('resize', function() {
             setTimeout(function() {
                 d3.select('.chart > svg').remove();
@@ -550,7 +550,7 @@
                 d3.select('#scatter > h2').remove();
                 drawScatter();
             }, 2000);
-        });
+        });*/
     }
     // kick things off
     init();
