--- a/index.html
+++ b/index.html
@@ -235,6 +235,10 @@
         .whatsapp {
             visibility: visible;
         }
+
+        .intro {
+            padding-top: 10rem;
+        }
     }
     /* Scrolldown-Pfeil */
 
